--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>练习</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./coffee_head.webp">
 </head>
 
 <body>
@@ -38,15 +39,15 @@
         <div class="wrapper">
             <div class="left">
                 <ul>
-                    <li><a href="">前端开发<span>></span></a></li>
-                    <li><a href="">前端开发<span>></span></a></li>
-                    <li><a href="">前端开发<span>></span></a></li>
-                    <li><a href="">前端开发<span>></span></a></li>
-                    <li><a href="">前端开发<span>></span></a></li>
-                    <li><a href="">前端开发<span>></span></a></li>
-                    <li><a href="">前端开发<span>></span></a></li>
-                    <li><a href="">前端开发<span>></span></a></li>
-                    <li><a href="">前端开发<span>></span></a></li>
+                    <li><a href="">咖啡招聘<span>></span></a></li>
+                    <li><a href="">微店<span>></span></a></li>
+                    <li><a href="">投稿转载<span>></span></a></li>
+                    <li><a href="">宝库入口<span>></span></a></li>
+                    <li><a href="">关于我们<span>></span></a></li>
+                    <li><a href="">视频中心<span>></span></a></li>
+                    <li><a href="">最新文章<span>></span></a></li>
+                    <li><a href="">前端资讯<span>></span></a></li>
+                    <li><a href="">客服微信<span>></span></a></li>
                 </ul>
             </div>
 
@@ -54,16 +55,16 @@
                 <div class="top">我的课程</div>
                 <div class="contect">
                     <dl>
-                        <dt>继续学习 程序语言设计</dt>
-                        <dd>正在学习-使用对象</dd>
+                        <dt>Brewing 咖啡冲煮</dt>
+                        <dd>正在学习 - 一级</dd>
                     </dl>
                     <dl>
-                        <dt>继续学习 程序语言设计</dt>
-                        <dd>正在学习-使用对象</dd>
+                        <dt>Barista Skills 咖啡师技能</dt>
+                        <dd>正在学习 - 三级</dd>
                     </dl>
                     <dl>
-                        <dt>继续学习 程序语言设计</dt>
-                        <dd>正在学习-使用对象</dd>
+                        <dt>Roasting 咖啡烘焙</dt>
+                        <dd>正在学习 - 二级</dd>
                     </dl>
                 </div>
                 <a href="#" class="more">全部课程</a>
@@ -75,14 +76,14 @@
     <div class="good wrapper">
         <h2>精品推荐</h2>
         <ul>
-            <li><a href="#">jQuery</a></li>
-            <li><a href="#">jQuery</a></li>
-            <li><a href="#">jQuery</a></li>
-            <li><a href="#">jQuery</a></li>
-            <li><a href="#">jQuery</a></li>
-            <li><a href="#">jQuery</a></li>
+            <li><a href="#">耶加雪菲日晒</a></li>
+            <li><a href="#">卢旺达水洗</a></li>
+            <li><a href="#">沃卡水洗</a></li>
+            <li><a href="#">巴拿马瑰夏日晒</a></li>
+            <li><a href="#">哥斯达黎加密处理</a></li>
+            <li><a href="#">白山庄园瑰夏</a></li>
         </ul>
-        <a href="#" class="change">修改兴趣</a>
+        <a href="#" class="change">查看更多</a>
     </div>
 
     <!-- 精品课程推荐 -->
