--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                 </ul>
             </div>
 
+            <div class="left_2">
+                <img src="left.png" alt="咖啡沙龙">
+            </div>
+
             <div class="right">
                 <div class="top">我的课程</div>
                 <div class="contect">
